--- a/client/src/Components/Admin/AdminMenu.module.css
+++ b/client/src/Components/Admin/AdminMenu.module.css
@@ -1,8 +1,8 @@
 .mainMenu {
+  margin: 0;
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: left;
+  align-items: center;
   list-style: none;
-  display: flex;
-}
-
-.mainMenu li {
-  margin-right: 20px;
 }
