--- a/client/src/Components/UI/Modals/SelectModal.module.css
+++ b/client/src/Components/UI/Modals/SelectModal.module.css
@@ -1,9 +1,17 @@
-.selectModal a {
+.anchor {
+  display: grid;
   height: 60px;
-  padding: 0 40px 0 20px;
-  display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+}
+
+.anchor:hover {
+  background-color: var(--colorBgDark);
+  color: var(--colorFontLight);
+}
+
+.anchor a {
+  padding: 20px 40px;
   text-decoration: none;
   color: var(--colorFontBlack);
   font-family: 'Raleway', sans-serif;
@@ -12,34 +20,42 @@
   line-height: 19px;
 }
 
-.selectModal a:hover {
-  background-color: var(--colorBgDark);
-  color: var(--colorFontLight);
-}
-
 .list {
   position: absolute;
   background-color: var(--colorBgSemiDark);
   list-style: none;
-  color: var(--colorFontLight);
-  /*transition: 0.3s;
+  transition: 0.3s;
   transform: translate3d(0, 0px, 0);
   opacity: 1;
-  z-index: 10;*/
+  z-index: 10;
 }
 
-.selectModal .liOptions {
-  margin: 0;
-}
-
-.liOptions a {
-  min-width: 300px;
+.list .liOptions {
+  display: grid;
   justify-content: left;
+  margin: 0;
+  color: var(--colorFontLight);
+}
+
+.list .liOptions:hover {
+  background-color: var(--colorBgDark);
+  color: var(--colorFontLight);
+}
+
+.list .liOptions a {
+  min-width: 300px;
+  text-decoration: none;
+  padding: 20px 40px;
+  text-decoration: none;
+  color: var(--colorFontBlack);
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
 }
 
 .hide {
-  display: none;
-  /*z-index: -10;
   transform: translate3d(0, -20px, 0);
-  opacity: 0;*/
+  opacity: 0;
+  pointer-events: none;
 }
