Adicionados os componentes: Components: UI/Buttons/Button3rdLeftIcon, UI/Buttons/ButtonLeftIcon, UI/Menus/SelectersActions, UI/Tittle/TittlePage, Admin/Service/ServicePainel

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,6 +16,7 @@
 
   /*Color Bg Button Vars*/
   --colorButtonPrimary: #20e3e3;
+  --colorButtonPrimaryUltraLight: #fff;
 
   /* Color Bg Vars*/
   --colorBgDark: #25292f;
